Refactor entity and repository names for consistency and clarity